Stopped hiding overflow on body

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,3 @@
-body {
-  overflow: hidden;
-}
-
 .title{
   text-align: center;
   font-family: 'Raleway', sans-serif;
